syntax = "proto3";

option go_package = "./kre";

message TestInput {
  string name = 1;
}

message TestOutput {
  string greeting = 1;
}
